--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -94,6 +94,9 @@
             margin: 0 auto 40px auto;
         }
     }
+    .UR-works .work-steps.slick-slider {
+        margin-bottom: 100px;
+    }
 }
 
 @media(max-width:767.98px) {
