--- a/css/style.css
+++ b/css/style.css
@@ -625,10 +625,53 @@ footer ul.social-links li a:hover {
     padding-right: 30px;
   }
   .navbar {
-    padding-top: 42px;
+    padding-top: 20px;
     padding-bottom: 20px;
+    border-bottom: 1px solid #f3f3f3;
   }
-  .navbar .navbar-brand {
+  .navbar .overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    top: 0;
+  }
+  .navbar .navbar-toggler {
+    padding: 0;
+    box-shadow: none;
+    outline: none !important;
+  }
+  .navbar .navbar-toggler img {
+    width: 21px;
+  }
+  .navbar .navbar-collapse {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 286px;
+    background: #fff;
+    height: 100%;
+    transform: translateX(286px);
+    transition: all 0.3s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
+    z-index: 99;
+    overflow-y: auto;
+  }
+  .navbar .navbar-collapse.collapse {
+    transform: translateX(0px);
+  }
+  .navbar .navbar-collapse .close-menu {
+    padding: 20px;
+  }
+  .navbar .navbar-collapse .close-menu a img {
+    width: 50px;
+  }
+  .navbar .navbar-nav .nav-item .nav-link {
+    font-size: 20px;
+    padding: 25px 20px;
+  }
+  .navbar .navbar-nav .nav-item .nav-link.btn {
+    max-width: 250px;
     margin: 0 auto;
   }
   .UR-hero {
