--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -22,10 +22,55 @@
         padding-right: 30px;
     }
     .navbar {
-        padding-top: 42px;
+        padding-top: 20px;
         padding-bottom: 20px;
-        .navbar-brand {
-            margin: 0 auto;
+        border-bottom: 1px solid #f3f3f3;
+        .overlay {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.3);
+            top: 0;
+        }
+        .navbar-toggler {
+            padding: 0;
+            box-shadow: none;
+            outline: none !important;
+            img {
+                width: 21px;
+            }
+        }
+        .navbar-collapse {
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 286px;
+            background: #fff;
+            height: 100%;
+            transform: translateX(286px);
+            transition: all 0.3s ease-in-out;
+            box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
+            z-index: 99;
+            overflow-y: auto;
+            &.collapse {
+                transform: translateX(0px);
+            }
+            .close-menu {
+                padding: 20px;
+                a {
+                    img {
+                        width: 50px
+                    }
+                }
+            }
+        }
+        .navbar-nav .nav-item .nav-link {
+            font-size: 20px;
+            padding: 25px 20px;
+            &.btn {
+                max-width: 250px;
+                margin: 0 auto
+            }
         }
     }
     .UR-hero {
