--- a/css/style.css
+++ b/css/style.css
@@ -615,6 +615,7 @@ footer ul.social-links li a:hover {
 
 @media (max-width: 1200px) {
   .UR-hero .img-fluid {
+    width: 100%;
     max-width: 320px;
   }
 }
@@ -776,6 +777,20 @@ footer ul.social-links li a:hover {
   }
   h3 {
     font-size: 19px;
+  }
+  .container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .navbar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .navbar .navbar-brand img {
+    max-width: 180px;
+  }
+  .navbar .navbar-toggler img {
+    width: 18px;
   }
   .UR-hero .inner-box a {
     display: block;
